WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240237
ASSERT in WebCore::RenderTreeUpdater::updateRenderTree
https://bugs.webkit.org/show_bug.cgi?id=240237
Summary
ASSERT in WebCore::RenderTreeUpdater::updateRenderTree
Gabriel Nava Marino
Reported
2022-05-09 09:48:55 PDT
<
rdar://problem/92084291
>
Attachments
Patch for landing
(2.63 KB, patch)
2022-05-09 09:50 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabriel Nava Marino
Comment 1
2022-05-09 09:50:57 PDT
Created
attachment 459053
[details]
Patch for landing
EWS
Comment 2
2022-05-09 10:45:28 PDT
Committed
r293981
(
250419@main
): <
https://commits.webkit.org/250419@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459053
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug